--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+  <link href="https://fonts.cdnfonts.com/css/writing-signature" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Welcome to the official website of Josipa Bilić, an Opera Singer renowned for her ethereal voice and professionalism. Explore her upcoming events, reviews, performances, and photos." />
+  <meta name="keywords" content="Josipa Bilić, Opera Singer, Opera, Soprano, Classical Music" />
+  <meta name="author" content="Luka Bilić" />
+  <meta property="og:title" content="Josipa Bilić - Opera Singer" />
+  <meta property="og:description"
+    content="Welcome to the official website of Josipa Bilić, an Opera Singer renowned for her ethereal voice and professionalism." />
   <title>Josipa Bilić</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script defer type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
