--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <link href="https://fonts.cdnfonts.com/css/writing-signature" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Welcome to the official website of Josipa Bilić, an Opera Singer renowned for her ethereal voice and professionalism. Explore her upcoming events, reviews, performances, and photos." />
