--- a/index.html
+++ b/index.html
@@ -1,25 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/iconJosipa2.png
+    "
+    />
+    <link
+      href="https://fonts.cdnfonts.com/css/writing-signature"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to the official website of Josipa Bilić, an Opera Singer renowned for her ethereal voice and professionalism. Explore her upcoming events, reviews, performances, and photos."
+    />
+    <meta
+      name="keywords"
+      content="Josipa Bilić, Opera Singer, Opera, Soprano, Classical Music"
+    />
+    <meta name="author" content="Luka Bilić" />
+    <meta property="og:title" content="Josipa Bilić - Opera Singer" />
+    <meta
+      property="og:description"
+      content="Welcome to the official website of Josipa Bilić, an Opera Singer renowned for her ethereal voice and professionalism."
+    />
+    <title>Josipa Bilić</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-  <link href="https://fonts.cdnfonts.com/css/writing-signature" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Welcome to the official website of Josipa Bilić, an Opera Singer renowned for her ethereal voice and professionalism. Explore her upcoming events, reviews, performances, and photos." />
-  <meta name="keywords" content="Josipa Bilić, Opera Singer, Opera, Soprano, Classical Music" />
-  <meta name="author" content="Luka Bilić" />
-  <meta property="og:title" content="Josipa Bilić - Opera Singer" />
-  <meta property="og:description"
-    content="Welcome to the official website of Josipa Bilić, an Opera Singer renowned for her ethereal voice and professionalism." />
-  <title>Josipa Bilić</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script defer type="module" src="/src/main.jsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <script defer type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
